<resources>
    <string name="app_name">Far Future Android App</string>
    <string name="title_activity_datagraph">Data Graph</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="back">Back</string>
    <string name="send_fan_command">Toggle fan</string>
    <string name="send_light_command">Toggle light</string>
    <string name="send_water_command">Dispense water</string>
    <string name="goto_graph">Plant History</string>
    <string name="goto_commands">Remote Controls</string>
    <string name="goto_settings">Settings</string>


    <string name="send_fan_off_command">Fan Off</string>
    <string name="send_fan_on_command">Fan On</string>
    <string name="send_light_on_command">Light On</string>
    <string name="send_light_off_command">Light Off</string>

    <string-array name="data_types_array">
        <item>Humidity</item>
        <item>Temperature</item>
        <item>Light Level</item>
        <item>Pressure</item>
        <item>Soil Moisture</item>
    </string-array>
</resources>