<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Commands">


    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/backButton"
        android:orientation="vertical"
        >
    <Button
        android:id="@+id/sendFOnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="send_fan_on_command"
        android:text="@string/send_fan_on_command"  />
        <!--
        app:layout_constraintBottom_toTopOf="@id/sendLButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />
         -->


    <Button
        android:id="@+id/sendFOffButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="send_fan_off_command"
        android:text="@string/send_fan_off_command" />
        <!--
        app:layout_constraintBottom_toTopOf="@id/sendLButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />
        -->

    <Button
        android:id="@+id/sendLOnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="send_light_on_command"
        android:text="@string/send_light_on_command" />
        <!--
        app:layout_constraintBottom_toTopOf="@id/sendWButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendFOnButton" />
        -->
        <Button
            android:id="@+id/sendLOffButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="send_light_off_command"
            android:text="@string/send_light_off_command" />

    <Button
        android:id="@+id/sendWButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="send_water_command"
        android:text="@string/send_water_command" />
        <!--
        app:layout_constraintBottom_toTopOf="@id/backButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendLButton" />
        -->

    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBackClick"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonlayout"
        app:layout_constraintVertical_bias="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>