<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="73dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >
    <Button
        android:id="@+id/toGraphButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_graph"
        android:onClick="toGraphClick"
        />

    <Button
        android:id="@+id/toCommandsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_commands"
        android:onClick="toCommandsClick"
        />
    <Button
        android:id="@+id/toSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_settings"
        android:onClick="toSettingsClick"
        />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>